@@ -1,3 +1,10 @@
+2003-02-09  Pascal Scheffers  <pascal@scheffers.net>
+	* tkchat.tcl: Removed the system messages that were displayed
+	when asking for onlineusers to the ircbridge
+	* tkchat.tcl: Added the local /noisy command to temporarily
+	suppress adding messages from nicks that you find
+	annoying. Whispers and emotes are not suppressed.
+
 2004-02-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Some fixes and catches in the color handling to deal 
